# taleofdagon

./: .gitignore  C009-TaleOfRedengard.kdev4  CCamera.h  CClock.h  CEngine.h  CEventManager.h  CGUI.h  CGame.h  CMakeLists.txt  CMap.h  CRenderable.h  CSoundSystem.h  CStateIntro.h  GameRules.h  IResource.h  IUnit.h  Makefile  README  README.md  c009-taleofredengard  cmake_install.cmake  enum.h  logging.h  main.cpp
.kdev4/: C009-TaleOfRedengard.kdev4
debug/: test.txt
debug/maps/: run.sh  test.map
include/: CArmor.h  CCamera.h  CChunk.h  CClock.h  CCombatManager.h  CDialogManager.h  CDialogue.h  CDialogueManager.h  CEngine.h  CEventManager.h  CGUI.h  CGame.h  CGameDebug.h  CLocator.h  CMap.h  CMapGenerator.h  CObjectUtil.h  CPlayer.h  CRenderable.h  CRenderer.h  CSoundSystem.h  CStateIntro.h  CTile.h  CTileFactory.h  CTimer.h  CUnit.h  CUnitFactory.h  CUnitFighter.h  CUnitKnight.h  CUnitVillager.h  CWorldMap.h  GameRules.h  IUnit.h  enum.h  logging.h  struct.h
include/Enum/: constants.h
include/Interface/: CUnit.h  IChunk.h  IEventable.h  IMap.h  IMapGenerator.h  IRenderer.h  IResource.h  ITileFactory.h  IUnit.h  IUnitFactory.h
include/zekin/: CUnitFactory.h  SDL_Text.h  gameapi.h  util.h
sounds/: door.sfs  door_open.sfs  motor.sfs  pound.sfs  water.sfs
src/: CLocator.cpp  CMakeLists.txt  main.cpp
tools/: genworldmap.sh  reload.sh  run.sh
zekin/: noise.h  types.h
